FIX: horizontal scroll issue caused by bootstrap 'row' class divs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,11 +18,26 @@ body {
   flex-direction: column;
 }
 
-p {
+.container-fluid,
+.col-12 {
+  padding: 0;
+}
+
+.row {
+  margin: 0 0;
+}
+
+p,
+label {
   line-height: 30px;
   letter-spacing: 1px;
 }
 
+h1,
+h2,
+h4 {
+  line-height: 1.4;
+}
 h1,
 #menu li,
 h4 {
@@ -32,14 +47,6 @@ h4 {
 h2,
 h3 {
   letter-spacing: 4px;
-}
-
-.container-fluid {
-  padding: 0;
-}
-
-.center-align {
-  text-align: center;
 }
 
 .uppercase {
@@ -72,7 +79,7 @@ nav a:hover {
   text-transform: uppercase;
   color: #3f4244;
   font-size: 1.5em;
-  display: inline;
+  /* display: inline; */
 }
 
 #menu {
@@ -101,23 +108,26 @@ main {
 }
 
 #hero-bg-img {
-  background: url("../images/pexels-marek-levak-2275221.webp") no-repeat center;
+  background: url("../images/pexels-marek-levak-2275221.webp") no-repeat center
+    center;
   height: 600px;
+  object-fit: cover;
 }
 
 #overlay-text {
   position: absolute;
+  padding: 0 20px;
   right: 0;
   left: 0;
   margin: auto;
   bottom: 3%;
+  max-width: 460px;
 }
 
 #overlay-text h4 {
   color: #f4f1de;
-  padding: 17px 25px;
+  padding: 17px;
   border-radius: 8px;
-  max-width: 460px;
   margin: auto;
   background-color: rgba(86, 117, 104, 0.3);
   text-align: center;
@@ -190,7 +200,7 @@ main {
 }
 
 #form-bg-video {
-  height: 750px;
+  height: 800px;
   width: 100%;
   object-fit: cover;
 }
@@ -216,6 +226,7 @@ main {
 
 #form-overlay h2 {
   margin-bottom: 1rem;
+  line-height: 1.3;
 }
 
 label {
